src/test/deca/syntax/invalid/synt/class_public_visibility.deca
/*
    Description: Test sur la déclaration d'une classe avec la visibilité public

    Résultat : erreur syntaxique
*/
public class C{
}
// @expected_output deca:6:0
